//// -- LEVEL 1
//// -- Tables and References

// Creating tables
Table facts [headercolor: #8e44ad] {
  fact_id int [pk, increment] // auto-increment
  currency_id int
  procedure_id int
  hospital_id_surrogate int
  owner_id_surrogate int
  address_id int
  pet_id_surrogate int
  species_id int
  breed_id int
  averages_counts_and_totals decimal
  kpis_and_other_derived_figures decimal
}

Table visits [headercolor: #3498db] {
  visit_id_surrogate int [pk, increment]  // auto-increment
  visit_id int
  visit_start_date date
  visit_end_date date
  visit_cost float
 }

Table currencies [headercolor: #03f4fc] {
  currency_id int [pk, increment]
  currency_symbol varchar
}

Table procedures [headercolor: #27ae60] {
   procedure_id int [pk, increment]  // auto-increment
   procedure_code varchar
   procedure_desc text
}

Table hospitals [headercolor: #f39c12] {
  hospital_id_surrogate int [pk, increment]  // auto-increment
  hospital_id int
  hospital_name varchar
}

Table owners [headercolor: #d35400] {
  owner_id_surrogate int [pk, increment]  // auto-increment
  owner_id int
  first_name varchar
  last_name varchar
  email varchar
}

Table addresses [headercolor: #c0392b] {
  address_id int [pk, increment]  // auto-increment
  postcode varchar
  address text
  city varchar
}

Table pets [headercolor: #2c3e50] {
  pet_id_surrogate int [pk, increment]  // auto-increment
  pet_id int
  pet_name varchar
  pet_dob date
}

Table species [headercolor: #316896] {
  species_id int [pk, increment]  // auto-increment
  species varchar
}

Table breeds [headercolor: #16a085] {
  breed_id int [pk, increment]  // auto-increment
  breed varchar
}

// Creating references
// You can also define relationship separately
// > many-to-one; < one-to-many; - one-to-one
Ref: visits.visit_id_surrogate - facts.fact_id
Ref: facts.procedure_id > procedures.procedure_id
Ref: facts.currency_id > currencies.currency_id
Ref: facts.hospital_id_surrogate > hospitals.hospital_id_surrogate
Ref: facts.owner_id_surrogate > owners.owner_id_surrogate
Ref: facts.address_id > addresses.address_id
Ref: facts.pet_id_surrogate > pets.pet_id_surrogate
Ref: facts.species_id > species.species_id
Ref: facts.breed_id > breeds.breed_id